--- a/views/privacidade.ejs
+++ b/views/privacidade.ejs
@@ -78,19 +78,20 @@
           <div class="lc-block mb-5">
             <div editable="rich">
                <h3>5 - São coletadas informações pessoais?</h3>
-               <p>Este site não possui área logada e não coleta informações pessoais para cadastro. Mas o Visitante afirma estar ciente que fornece informação de forma consciente e voluntária por meio do formulário de contato e outras formas de contato disponibilizadas no site, como aplicativo de mensagem e etc.</p>
+               <p>Este site não possui área logada e não coleta informações para cadastro. Mas o Visitante afirma estar ciente que fornece informações pessoais de forma consciente e voluntária por meio dos formulários de contato disponibilizados no site.</p>
             </div>
          </div>
          <div class="lc-block mb-5">
             <div editable="rich">
                <h3>6 - Quais informações são coletadas?</h3>
-               <p>Quando o Visitante preenche o formulário no site ou utiliza qualquer outra forma de contato, determinados Dados Pessoais solicitados serão mantidos em sigilo: Nome, E-mail, Idade e Telefone.</p>
+               <p>Quando o Visitante preenche o formulário no site ou utiliza qualquer outra forma de contato, determinados Dados Pessoais solicitados serão mantidos em sigilo: Nome, E-mail e Telefone.</p>
                <p>Nosso site pode coletar informações não-pessoais como endereço de IP e de dados do navegador no site, tipo de dispositivo e de browser utilizado, sistema operacional etc. O site pode usar cookies e tags do Google para melhorar a experiência da pessoa que visita o site e identificar quantas vezes acessou nosso endereço eletrônico, quanto tempo permaneceu e quais páginas acessou, leu ou recomendou. São informações anônimas para fins estatísticos.</p>
             </div>
          </div>
          <div class="lc-block mb-5">
             <div editable="rich">
                <h3>7 - Como são usadas as informações coletadas?</h3>
+               <p><strong>Para prestar e operar os Serviços:</strong> prestar aos nossos Visitantes assistência e suporte técnico contínuos ao cliente. Para poder entrar em contato com nossos visitantes com avisos gerais ou personalizados relacionados ao serviço e mensagens promocionais. Para criar dados estatísticos agregados e outras informações não pessoais agregadas e/ou inferidas, que podem ser usadas por nós ou por nossos parceiros comerciais para prestar e melhorar nossos respectivos serviços. Para cumprir quaisquer leis e regulamentos aplicáveis.</p>
                <p><strong>Para melhorar nosso serviço:</strong> as informações nos ajudam a aprimorar nossos serviços e responder de forma mais efetiva aos contatos realizados.</p>
                <p><strong>Para garantir mais segurança ao site:</strong> as informações permitem que comportamentos fora do habitual e eventuais brechas de segurança do site sejam identificadas e tratadas, além de garantir obrigações legais e a proteção de direitos autorais.</p>
                <p><strong>Para personalizar sua experiência:</strong> as informações nos auxiliam a entender como as pessoas que visitam o site aproveitam as informações e como estão utilizando os recursos disponíveis. Por esse motivo, as estatísticas anônimas de visitação a nosso site e interação podem ser usadas para gerar novos conteúdos de interesse e também criar comunicações direcionadas para nosso público.</p>
@@ -109,7 +110,7 @@
                <p>Os pequenos arquivos de texto baixados automaticamente em seu dispositivo quando você acessa um site são denominados cookies. Eles são usados para que seja possível identificar dispositivos, atividades e as preferências de cada usuário. Os cookies não permitem que qualquer tipo de informação seja extraída do disco rígido do usuário, e não é possível por meio de cookies acessar informações pessoais que não tenham sido voluntariamente fornecidos pelo usuário. Os cookies podem ser desabilitados, mas isto poderá prejudicar a experiência de acesso, uma vez que as informações personalizadas deixarão de ser usadas.</p>
                <p>Aviso de cookies: utilizamos scripts para comunicação e controle dos consentimentos dos visitantes do nosso site de maneira escrita, livre e detalhada, conforme o artigo 8º da LGPD.</p>
             <p>Cookies do nosso site: São os arquivos de cookies enviados exclusivamente pelo nosso site para personalizar a experiência do usuário, melhorar nossos serviços e garantir a segurança do site.</p>
-                <p>Cookies de Terceiros: É possível obter mais informações sobre os cookies de terceiros e como os dados obtidos a partir dele são tratados, além da descrição dos cookies utilizados e suas características, por meio do seguinte link: <a href="https://developers.google.com/analytics/devguides/collection/gajs/cookie-usage">Google Analytics</a></p>
+                <p>Cookies de Terceiros: É possível obter mais informações sobre os cookies de terceiros e como os dados obtidos a partir dele são tratados, além da descrição dos cookies utilizados e suas características, por meio dos seguintes links: <p><a href="https://developers.google.com/analytics/devguides/collection/gajs/cookie-usage" target="_blank">Google Analytics</a></p><a href="https://pt-br.facebook.com/business/help/471978536642445" target="_blank">Pixel do Facebook/Meta</a><p></p>
                 <p>Gestão de Cookies: O usuário poderá se opor ao registro de cookies pelo site, bastando que desative esta opção nas configurações do seu próprio navegador. A desativação dos cookies, no entanto, pode comprometer a disponibilidade de algumas funcionalidades do site. Além disso, a remoção das preferências do usuário pode prejudicar sua experiência de navegação e interação. A desativação de todos os cookies, no entanto, não é possível pois alguns são essenciais para que o site funcione corretamente.</p>
         </div>
          </div>
