--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -2,7 +2,7 @@
 <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-5 pb-4 pb-lg-5 pt-5 mt-5">
+      <div class="container col-xxl-8 px-5 pb-4 pb-sm-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
           
           <div class="col-lg-8 my-4  my-lg-5 d-flex flex-column align-items-center" data-anima="esquerda">
@@ -59,7 +59,7 @@
                             
                             <!-- Resposta do formulário enviado -->
                               <% if(formContato.info){ %>
-                                  <div class="container p-4 position-absolute top-0 mx-auto pulse-brilho">                                
+                                  <div class="container p-4 position-absolute top-0 mx-auto ">                                
                                     <div class="row">                                
                                       <div class="col-md-4 mx-auto w-auto">                                
                                         <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -75,7 +75,7 @@
                               <% } %>
 
                               <% if(formContato.err){ %>
-                                <div class="container p-4 position-absolute top-0 mx-auto pulse-brilho">                                
+                                <div class="container p-4 position-absolute top-0 mx-auto">                                
                                   <div class="row">                                
                                     <div class="col-md-4 mx-auto w-auto">                                
                                       <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -91,8 +91,19 @@
                               <% } %>
                           
                             <!-- btn enviar do formulário -->
-                            <button id="sendMessageButton" class="botao-dourado btn-hover-lt" type="submit"> <span class="">Enviar</span></button>
+                            <button id="sendMessageButton" class="botao-dourado btn-hover-lt" type="submit"> 
+                              <span class="">Enviar</span>
+                            </button>
+                            <span id="spin" class="p-2 text-center d-none"><img src="./images/spin-preload.svg" class="w-25"></div></span>
                           </div>
+                          
+                          <script>
+                              document.querySelector("#contactForm").addEventListener("submit", ()=>{
+                                  const spin = document.querySelector("#spin")
+                                  spin.classList.remove("d-none")
+                                  spin.classList.add("d-block")
+                              })
+                          </script>
                           
                         </div> <!--end row -->
                       </form>
@@ -112,7 +123,7 @@
     <p>Me chamar no whatsapp</p>
     <!-- <img src="./images/seta-encaracolada.svg" class="pb-5 ps-5 pt-4 ms-5 mb-5" style="transform: rotateZ(-50deg);"> -->
     <div class="col-6 col-lg-3 btn-card pt-2 pb-5">
-        <a href="https://wa.me/+14402431094" class="link-sucess">
+        <a href="http://wa.me/5521992641050?text=Olá%20Mônica,%20vim%20através%20do%20site.%20Gostaria%20de%20agendar%20uma%20consulta,%20por%20favor." target="_blank" class="link-sucess">
           <div class="lc-block card h-100 p-0 link-success shadow rounded-2">
               <div class="lc-block card-body">
                   <div class="lc-block my-4">
@@ -235,3 +246,4 @@
 
 <!-- footer -->
 <%- include('footer') %>
+
