--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,19 +1,19 @@
-<footer style="background-color: #fff3e8; margin: 0;">
+<footer style="background-color: #fff3e8; margin-top:0" >
     <section>
-      <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-4 mt-5 border-top">
+      <div class="container px-lg-4 d-flex flex-column flex-lg-row justify-content-center align-items-center py-4 mt-4 border-top">
         
-        <div class="col-md-4 d-flex align-items-center">
+        <div class="col-lg-4 d-flex align-items-center">
           <div class="lc-block text-center mb-3 mb-md-0">
             <a class="navbar-brand" href="/">
-              <img class="img-fluid m-2" src="./images/logo/logo.png" alt="my brand" width="150px">
+              <img class="m-2 img-fluid" width="150px" height="168" src="./images/logo/logo.png" alt="logo-psicologa-monica">
             </a>
           </div>
         </div>
         
-        <div class="col-md-4 d-flex justify-content-center gap-3 pb-3">
+        <div class="col-lg-4 d-flex justify-content-center gap-3 py-3">
           <div class="lc-block btn-card">
     
-            <a href="https://facebook.com/klpersonaliza2" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=61556908178656" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" viewBox="0 0 16 16" lc-helper="svg-icon" class="">
                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
               </svg>
@@ -31,18 +31,16 @@
           </div>
           <div class="lc-block btn-card">
     
-            <a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" viewBox="0 0 16 16" lc-helper="svg-icon">
-                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"></path>
-              </svg>
-            </a>
+           
     
           </div>
         </div>
 
-        <div class="col-md-4 d-flex align-items-center align-self-center align-items-lg-end pb-lg-0 pt-lg-5 flex-column">
-          <span>@ 2024, Psicóloga CRP 05/73889</span>
-          <span>Site desenvolvido por <a href="#">AltitudeSolD</a></span>
+        <div class="col-lg-4 d-flex align-items-center align-self-center align-items-lg-end pb-lg-0 flex-column">
+          <span><a href="/privacidade">Política de Privacidade</a></span>
+          <span>CRP 05/73889</span>
+          <span>@ 2024 - Psicóloga Mônica Costa</span>
+          <span>Site desenvolvido por <a href="http://wa.me/5521985533394?text=Oi,%20cheguei%20aqui%20por%20meio%20do%20site%20da%20Psicóloga%20Mônica%20Costa.">CrossWeb</a></span>
         </div>
     
       </div>
