--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    
+<!-- Google Tag Manager -->
+<script id="tagManagerScript"></script>
+<!-- End Google Tag Manager -->
+
     <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <link rel="shortcut icon" href="./images/favicon.png" type="">
+  <meta name="keywords" content="Terapia Online, Ansiedade, Depressão, Autoconhecimento, Niterói, Rio de Janeiro, Psicóloga, Saúde Mental, Bem-Estar Psicológico, TCC, Adultos" />
+  <meta name="description" content="Psicóloga em Niterói oferecendo terapia para ansiedade, depressão e autoconhecimento. Agende sua consulta online hoje!" />
+  <meta name="author" content="Lucas Custódio" />
     <!-- Título da Página -->
-  <title>Psi Monica Costa</title>
+  <link rel="Shortcut Icon" href="../images/logo/favicon.png">  
+  <title>Psicóloga Mônica Costa</title>
+
+  <link rel="preload" href="../images/fundo_hero__2.webp" as="image" media="(min-width: 576px)">
+  <link rel="preload" href="../images/fundo_hero__2_mobile.webp" as="image" media="(max-width: 575px)">
+  <link rel="preload" href="../images/psicologa-monica.png" as="image">
  
     <!-- Bootstrap Css-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -22,13 +31,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Martel+Sans:wght@600&display=swap" rel="stylesheet">
-    <script src="./js/preload.js"></script>
+    <!-- <script src="./js/preload.js"></script> -->
+    
+   
+
+ <!-- Meta Pixel Code -->
+      <script id="pixelScript"></script>
+      <noscript id="pixelNoScript"></noscript>
+    <!-- End Meta Pixel Code -->
+
 </head>
 
 
 
 
 <body>
+    
+
+<!-- Google Tag Manager (noscript) -->
+<noscript id="tagManagerNoScript"></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <!-- preload -->
   <!-- <div id="preload" class="position-absolute w-100 h-100 justify-content-center align-items-center" style="background-color: #FFF3E8; display: flex">
     <div><img src="./images/spin-preload.svg" alt="spin" width="80px"></div>
@@ -37,10 +60,10 @@
 <!-- <div id="content" style="display: none;"> -->
 
 
-  <!-- politica de cookies -->
+<!-- politica de cookies -->
 
 <!-- Button trigger modal -->
-  <div id="cookies-container" class="container p-0 position-fixed w-50 left-0 bottom-0" style="z-index: 1000;" data-anima="baixo">
+  <div id="cookies-container" class="container p-0 position-fixed w-50 left-0 bottom-0" style="z-index: 1000;" data-anima="esquerda">
       <div class="row alert p-3 text-white" style="background-color: #A99382;">
         
         <div class="col-xs-12 col-lg-7 align-items-center">
@@ -94,7 +117,21 @@
   <div class="hero_area">
 
       <div class="hero_bg_box">
-        <div class="bg_img_box" data-anima="cima">
+        <style scoped>
+          .bg-responsivo {
+              background-image: url('../images/fundo_hero__2.webp'); 
+              background-size: cover;
+              background-position: bottom;
+
+          }
+          @media (max-width: 575px) {
+              .bg-responsivo {
+                  background-image: url('../images/fundo_hero__2_mobile.webp');
+                  background-position: center;
+              }
+          }
+          </style>
+        <div class="bg_img_box bg-responsivo" data-anima="cima">
         </div>
       </div>
 
@@ -102,7 +139,7 @@
       <header>
       <nav class="navbar navbar-expand-lg ">
         <div id="nav" class="container-fluid col-8">
-          <a class="navbar-brand" href="/"><img src="./images/logo/logo-3.png" alt="logo"></a>
+          <a class="navbar-brand" href="/"><img src="./images/logo/logo-3.png" width="auto" height="auto" alt="logo"></a>
           <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
