--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -5,7 +5,7 @@
 	  <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
 			<div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
-				<img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+				<img src="./images/psicologa-monica.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
 			  </div>
 			  <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
 	
@@ -21,7 +21,9 @@
               Me conheça um pouco mais
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-center">
-				<a id="btnMinhaHistoria" class="botao-dourado px-4 w-auto pulse-brilho" href="" id="btnBemVindo" role="button"><span>Minha História</span></a>
+				<a id="btnMinhaHistoria" class="botao-dourado px-4 w-auto pulse-brilho" href="" id="btnBemVindo" role="button">
+					<span>Minha História</span>
+				</a>
 
             </div>
           </div>
@@ -31,18 +33,70 @@
 
   </div>
 
-<!-- btn whatsapp-->
-    <a id="btn-whats" href="http://wa.me/5521992641050?text=Olá%20Mônica,%20vim%20através%20do%20site.%20Gostaria%20de%20agendar%20uma%20consulta,%20por%20favor." target="_blank" class="position-fixed bottom-0 end-0 m-3 m-lg-5 pulse-brilho" style="z-index: 2;"> 
-		<img src="./images/whatsapp.svg" class="btn-modal-trat rise-shake" width="70px">
-				 
-	  </a>
-<!-- end btn whatsapp -->
+<!-- btn e form whatsapp-->
+<div class="position-fixed bottom-0 end-0 m-3 m-lg-5 d-flex flex-column align-items-end" style="z-index: 2;"> 
+ 
+	<form id="zapForm" name="zapMessage" method="post" action="/captacao" class="position-fixed bottom-0 end-0 m-2 d-none col-lg-4 rounded-3 d-flex flex-column justify-content-end align-items-center bg-light" style=" z-index:5">
+		<div class="w-100 rounded-top-3 d-flex justify-content-between align-items-center p-4" style="background-color: #25D366;">
+			<div class="d-flex align-items-center gap-2">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-chat-left-fill" viewBox="0 0 16 16">
+					<path d="M2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+				</svg>
+				<p class="text-white m-0">Chat com WhatsApp</p>
+			</div>
+			<div id="btnCloseZap" style="cursor: pointer;">
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-x" viewBox="0 0 16 16">
+					<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+				</svg>
+			</div>
+			
+		</div>
+		<div class="row p-4  justify-content-center">
+			<div class="form-group">
+				<input class="form-control" name="nome" type="text" placeholder="Nome" required="required" data-validation-required-message="Por Favor, digite seu nome.">
+				<p class="help-block text-danger"></p>
+			</div>
+			<div class="form-group">
+				<input class="form-control" name="email" type="email" placeholder="Email" required="required" data-validation-required-message="Por Favor, digite seu email.">
+				<p class="help-block text-danger"></p>
+			</div>
+			<div class="form-group">
+				<input class="form-control" name="telefone" type="tel" placeholder="Telefone" maxlength="17" value="+55(21)" required="required" data-validation-required-message="Por Favor, digite seu número de telefone.">
+				<p class="help-block text-danger"></p>
+			</div>
+			<div class="form-group">
+				<textarea class="form-control" style="min-height: 80px; max-height: 120px;" name="mensagem" placeholder="Sua mensagem" required="required" data-validation-required-message="Please enter a message."></textarea>
+				<p class="help-block text-danger"></p>
+			</div>
+		
+			<button class="btn btn-light w-auto d-flex align-items-center gap-2 p-2" style="background-color: #25D366;" type="submit"> 
+				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-whatsapp" viewBox="0 0 16 16">
+					<path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+				  </svg>
+				<span class="text-white">Iniciar Conversa</span>
+			</button>	
+		</div>
+		<!-- btn enviar do formulário -->
+		
+	</form>
+
+	<div class="btn-zap d-flex align-items-center" style="cursor: pointer;">
+	
+		<div class="text-zap p-2 rounded border d-none" style="background-color: #25D366; margin-right: -20px;">
+			<span class="text-white">&nbspVamos conversar?&nbsp&nbsp&nbsp&nbsp</span>
+		</div>
+		<img src="./images/whatsapp.svg" style="z-index:2" class="img-zap rise-shake" width="70px" height="70px" alt="botao-do-whatsapp">
+	
+	</div>
+
+</div>
+<!-- end btn e form whatsapp -->
 
 
 <main style="overflow-x: hidden; overflow-y: hidden">
 
 <!-- History -->
-<section id="minhaHistoria" class="container my-5 py-5">
+<section id="minhaHistoria" class="container my-5 pt-5">
 	<div class="row px-3 px-lg-0">
 		<div class="col-md-4 align-self-center" data-anima="esquerda">
 			<div class="lc-block border-top py-4" style="letter-spacing:10px">
